updated pages and smaller screen friendlier

--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
 </head>
 <body>
     <main>
-        <nav>
-            <ul>
-                <li class="logo"><a href="">D&D</a></li>
-                <div class="center-nav-links">
-                    <li class="center-link"><a href="#designer-section">Design<br>Projects</a></li>
-                    <li class="center-link"><a href="#developer-section">Developer<br>Projects</a></li>
-                    <li class="center-link"><a href="#bio-section">About<br>Me</a></li>
-                </div>
-                <div class="mail-icon">
-                    <a href="#contact-me-section"><li><i class="fa-solid fa-envelope"></i></li></a>
-                </div>
-                
-            </ul>
+        <nav class="navbar">
+            <div class="brand-name">D&D</div>
+            <a href="#" class="hamburger-btn">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="about-me.html">About Me</a></li>
+                    <li><a href="#">Design</a></li>
+                    <li><a href="#">Development</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         </nav>
 
         <section id="bio-section">
             <div class="title-pic">
-                <h1>Hi,<br>I'm Kayla<br>Your Next</h1>
+                <h1 id="typing-effect">Hi,<br>I'm Kayla<br>Your Next</h1>
                 <img id="profile-pic"src="images/KaylaLittlecircled.png" alt="profile-pic">
             </div>
             <div class="bio-btn">
                 <a href="#designer-section"><button class="des-btn">Designer</button></a>
                 <a href="#developer-section"><button class="dev-btn"> Developer</button></a>
             </div>
-            <p class="bio-info">A self-taught & community taught designer and developer. I have always had a passion for design, and through the ability of going through life, I have also learned and loved to develop through code. I have always attracted people toward me and now I use that gift to be able to deisgn and develop for them. I specialize in doing so for the local small businesses here in the north Florida region. Below are some of my work examples. If you are in need and would love to colloborate please feel free to email me below. We will be in touch soon!<br> <br>
-            <q>Always laugh when you can, it's cheaper than medicine.</q>
-            </p>
         </section>
 
         <section id="designer-section">
@@ -121,7 +120,7 @@
                     </a>
                 </div>
             </div>
-            <a href="https://github.com/Kaylalittle-dev" target="_blank">
+            <a href="dev-projects.html" target="_blank">
                 <button class="more-projects-btn">
                     <span>More<br>Projects</span>
                     <i class="fa-solid fa-arrow-right"></i>
