--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kayla's Portfolio Site</title>
+    <title>Kayla Little</title>
 
     <!----------------------- LINKS ------------------------------>
     <link rel="stylesheet" href="styles.css">
@@ -20,9 +20,9 @@
             <div class="navbar-links">
                 <ul>
                     <li><a href="about-me.html">About Me</a></li>
-                    <li><a href="#">Design</a></li>
-                    <li><a href="#">Development</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#designer-section">Design</a></li>
+                    <li><a href="#developer-section">Development</a></li>
+                    <li><a href="#contact-me-section">Contact</a></li>
                 </ul>
             </div>
         </nav>
